--- a/assets/repo/repo.conf
+++ b/assets/repo/repo.conf
@@ -1,14 +1,14 @@
 APT {
 FTPArchive {
 Release {
-Origin "ORIGIN_HERE";
-Label "LABEL_HERE";
+Origin "valex";
+Label "Menthe";
 Suite stable;
 Version 1.0;
-Codename CODENAME_HERE;
+Codename Menthe;
 Architectures iphoneos-arm;
 Components main;
-Description "DESCRIPTION_HERE";
+Description "A small repo which is originally made for personal use and not always regularly kept up-to-date.";
 };
 };
 };
